Fase 6 - Init
